# spectre

./: README.md  pyproject.toml  scan_config.yaml
.cursor/rules/: data-analysis.mdc  jupyter.mdc  machine-learning.mdc  uv.mdc
examples/: run_scan.py
notebooks/: run_spectre.ipynb
spectre/: __init__.py  cli.py
spectre/core/: __init__.py  config.py  conformal.py  features.py  output.py  pipeline.py  scoring.py
spectre/detectors/: __init__.py  distribution.py  energy.py  gsp.py  interlayer.py  layer_graph.py  multiview.py  ot.py  rmt.py  robust.py  sequence.py  spectral.py  spectrogram.py  tda.py
spectre/io/: __init__.py  loader.py  name_mapper.py
spectre/tests/: __init__.py  test_attacks.py  test_detectors.py
spectre/viz/: __init__.py  graph.py  heatmaps.py  spectra.py  spectrogram.py
